--- a/UI/src/app/pages/login/login.component.html
+++ b/UI/src/app/pages/login/login.component.html
@@ -1,15 +1,19 @@
-<div class="login-container">
-  <h2>Login</h2>
-  <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input id="username" formControlName="username" type="text" class="form-control" value="Afsar" readonly />
+<div class="page-container">
+  <div class="content-wrapper">
+    <div class="login-container">
+      <h2>Login</h2>
+      <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input id="username" formControlName="username" type="text" class="form-control" value="Afsar" readonly />
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input id="password" formControlName="password" type="password" class="form-control" />
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Login</button>
+      </form>
+      <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
     </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input id="password" formControlName="password" type="password" class="form-control" />
-    </div>
-    <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Login</button>
-  </form>
-  <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
+  </div>
 </div>
