--- a/UI/src/app/pages/login/login.component.scss
+++ b/UI/src/app/pages/login/login.component.scss
@@ -1,11 +1,15 @@
 // Elegant gradient background for login page
+.page-container {
+  height: 100vh;
+  background: linear-gradient(135deg, #f2f4f7 0%, #4e2b4d 100%);
+}
+
 .login-container {
-  min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(135deg, #f2f4f7 0%, #4e2b4d 100%);
 }
 
 form {
