--- a/UI/src/app/pages/login/login.component.scss
+++ b/UI/src/app/pages/login/login.component.scss
@@ -1,11 +1,15 @@
 // Elegant gradient background for login page
 .page-container {
   height: 100vh;
-  background: linear-gradient(135deg, #f2f4f7 0%, #4e2b4d 100%);
+  background:  linear-gradient(135deg, var(--bg-gradient-start) 0%, var(--bg-gradient-end) 100%);
 }
+h2 {
+    color: var(--heading-color);
+    margin-bottom: 2rem;
+  }
 
 .login-container {
-  height: 100%;
+  height: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,10 +17,10 @@
 }
 
 form {
-  background: linear-gradient(135deg, #dbe4e7 0%, #c9b5c9 100%);
+  background: rgba(255,255,255,0.1);
   padding: 2rem;
   border-radius: 12px;
-  box-shadow: 5px 4px 24px rgba(7, 64, 235, 0.1);
+  box-shadow: 5px 4px 24px rgba(153, 177, 249, 0.1);
   width: 320px;
 }
 
@@ -25,7 +29,7 @@ form {
 }
 
 label {
-  color: #2d2a2a;
+  color: var(--heading-color);
   font-weight: 600;
 }
 
